Second paragraph added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hey </h1>
     <p>This is a paragraph for testing some kinds</p>
+    <p>This line will be the second commit of my repo</p>
 </body>
 </html>
